--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 .vscode/
 .idea/
 
+# Quarto
+_site/
+.quarto/
+
 # Python
 __pycache__/
 *.py[cod]
@@ -32,4 +36,3 @@ pnpm-debug.log*
 
 # Jupyter
 .ipynb_checkpoints/
-
