--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - href: rust_primer.qmd
+        text: Rust Primer
       - href: hdd_tco_summary.qmd
         text: HDD TCO
       - href: ampereone_m_vs_amd_epyc.qmd
